home/Deployments/kavita/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita-ingress
  namespace: kavita-system
spec:
  ingressClassName: nginx-external
  rules:
  - host: books.heyit.works
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kavita-svc
            port:
              number: 5000
